Adding grid primitive slow for many subdivisions #37573

Closed
opened 2013-11-21 17:31:34 +01:00 by Pierrick K. · 6 comments

System Information
Ubuntu 12.04.3
NVIDIA GK107GLM [Quadro K1000M]
Intel i7-3740QM @ 2.70GHz

Blender Version
Blender 2.6x

Short description of error

bpy.ops.mesh.primitive_grid_add is getting very slow for subdivisions > 100.

Exact steps for others to reproduce the error

You will find in - [x] the scripts use for the test, and in - [x] the results.

**System Information** Ubuntu 12.04.3 NVIDIA GK107GLM [Quadro K1000M] Intel i7-3740QM @ 2.70GHz **Blender Version** Blender 2.6x **Short description of error** `bpy.ops.mesh.primitive_grid_add` is getting very slow for subdivisions > 100. **Exact steps for others to reproduce the error** You will find in - [x] the scripts use for the test, and in - [x] the results. - [x] https://gist.github.com/pierriko/7234720 - [x] https://docs.google.com/spreadsheet/ccc?key=0AmpIySwDLOg8dDFxUlNjZWozRWhqWkF3aXBiQmViYkE
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @PierrickKoch

Added subscriber: @PierrickKoch
Brecht Van Lommel changed title from time of primitive_grid_add to Adding grid primitive slow for many subdivisions 2013-11-22 18:02:52 +01:00
Campbell Barton was assigned by Brecht Van Lommel 2013-11-22 18:02:52 +01:00

This issue was referenced by blender/blender-addons-contrib@aa3c06b41c

This issue was referenced by blender/blender-addons-contrib@aa3c06b41ca9012e22f1d7d61114842a6cdf9baa

This issue was referenced by aa3c06b41c

This issue was referenced by aa3c06b41ca9012e22f1d7d61114842a6cdf9baa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit aa3c06b41c.

Closed by commit aa3c06b41c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37573
No description provided.