Fix T37573: Adding grid primitive slow for many subdivisions